--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+      <!-- Bootstrap 5 (CSS) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
 </head>
 
@@ -13,9 +14,9 @@
     <section class="top-section">
         <div>
             <div class="row">
-                <div class="col-sm-6 ps-0">
+                <div class="col-sm-12 col-lg-6 ps-0 px-0">
                     <div class="top-banner-img-col">
-                        <img src="images/top-banner.png" style="width: 120px;" alt="">
+
                     </div>
                 </div>
                 <div class="col-6">
@@ -30,7 +31,7 @@
                         </div>
                         <h1 class="mb-4">RENEWABLE ERGON
                             PARTNERWITH
-                            PURPOSE</h1> 
+                            PURPOSE</h1>
                         <h4>Build the Future of Clean
                             Energy <br> With Us</h4>
                         <hr>
@@ -129,7 +130,7 @@
             <h5 class="mb-5">From EPCs to engineering firms, we collaborate with proven professionals who <br>
                 bring clean-energy projects to life — safely, on time, and at scale.</h5>
             <div class="row">
-                <div class="col-sm-4 mb-5">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-1.png" alt="">
@@ -144,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-5">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-2.png" alt="">
@@ -159,7 +160,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-5">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-3.png" alt="">
@@ -174,7 +175,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-4.png" alt="">
@@ -188,7 +189,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-5.png" alt="">
@@ -203,7 +204,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/partner-img-6.png" alt="">
@@ -231,7 +232,7 @@
             <h5 class="mb-5">Work with a global energy platform backed by investors, technology, <br>
                 and a commitment to long-term partnerships.</h5>
             <div class="row">
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/renewable-img-1.png" alt="">
@@ -243,7 +244,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/renewable-img-2.png" alt="">
@@ -256,7 +257,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/renewable-img-3.png" alt="">
@@ -270,7 +271,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/renewable-img-4.png" alt="">
@@ -282,7 +283,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 mb-4">
+                <div class="col-sm-12 col-lg-4 mb-5">
                     <div class="d-flex">
                         <div>
                             <img src="images/renewable-img-5.png" alt="">
@@ -378,7 +379,7 @@
             <div class="row">
                 <div class="col-sm-10">
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Company Name</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -388,7 +389,7 @@
 
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <label for="CompanyName" class="col-form-label">Contact Info </label>
                             <span class="label-colon">:</span>
                         </div>
@@ -398,7 +399,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
 
                             <label for="CompanyName" class="col-form-label">Partner Type </label>
                             <span class="label-colon">:</span>
@@ -409,7 +410,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Regions Served</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -419,7 +420,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Company Name</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -429,7 +430,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Years in Business</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -438,7 +439,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Licenses</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -447,7 +448,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Sample Project </span>
                             <span class="label-colon">:</span>
                         </div>
@@ -456,7 +457,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Upload Profile</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -465,7 +466,7 @@
                         </div>
                     </div>
                     <div class="row g-3 align-items-center mb-2">
-                        <div class="col-2 d-flex justify-content-between">
+                        <div class="col-lg-2 col-sm-4 d-flex gap-3  justify-content-lg-between">
                             <span class="label-text">Consent Box</span>
                             <span class="label-colon">:</span>
                         </div>
@@ -572,7 +573,7 @@
                         <div>
                             <h5>1 Bridge Plaza North, Suite 272
                             </h5>
-                            <h5>Fort Lee NJ 07024, United States
+                            <h5>1 Bridge Plaza North, Suite 272
                             </h5>
                         </div>
                         <div>
